tests/Asm/negative/vtest006.jva
-- branch stack height mismatch

function main() {
  push true;
  br {
    true: { push 1; push 2; }
    false: { push 1; }
  };
  ret;
}
